--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-test init master
+test init master > after "git branch test" > "git checkout test"
 </body>
 </html>
